--- a/variaveis e operadores aritmeticos/operadoreslogicosearitmeticos/OperadoresLogicosAritmeticosRelacionais.ipynb
+++ b/variaveis e operadores aritmeticos/operadoreslogicosearitmeticos/OperadoresLogicosAritmeticosRelacionais.ipynb
@@ -283,68 +283,267 @@
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 01 - Sua resposta aqui..."
+        "# EXERCÍCIO 01 - Sua resposta aqui...\n",
+        "# 1. Peça o nome e mostre uma mensagem de boas vindas ao usuário.\n",
+        "\n",
+        "#entrada\n",
+        "name = input(\"Qual é o seu nome? \")\n",
+        "\n",
+        "#saida\n",
+        "print(\"Bem vindo \", name)"
       ],
       "metadata": {
-        "id": "lwH7VERpvKr7"
+        "id": "lwH7VERpvKr7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "67ed71d7-435e-4df3-99b4-11823f6cf0b8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Qual é o seu nome? Vinicius Luz\n",
+            "Bem vindo  Vinicius Luz\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 02 - Sua resposta aqui..."
+        "# EXERCÍCIO 02 - Sua resposta aqui...\n",
+        "# 2 Solicite ao usuário dois números. Apresente a Soma, Subtração, Divisão e Multiplicação destes dois números.\n",
+        "\n",
+        "#entrada\n",
+        "A = float(input(\"digite um número: \"))\n",
+        "B = float(input(\"digite outro número: \"))\n",
+        "\n",
+        "#processamento\n",
+        "soma = A + B\n",
+        "subt = A - B\n",
+        "div = A / B\n",
+        "mult = A * B\n",
+        "\n",
+        "#saida\n",
+        "print(\"Soma = \", soma, \"Subtração = \", subt, \"Divisão = \", div, \"Multiplicação = \", mult)"
       ],
       "metadata": {
-        "id": "cClYukBfucKc"
+        "id": "cClYukBfucKc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d0329a6-3883-4914-c4ed-2fe1a346141f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número: 1\n",
+            "digite outro número: 1\n",
+            "Soma =  2.0 Subtração =  0.0 Divisão =  1.0 Multiplicação =  1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 03 - Sua resposta aqui..."
+        "# EXERCÍCIO 03 - Sua resposta aqui...\n",
+        "# 3 Peça para o usuário o seu nome, ano de nascimento e ano atual. A partir desses dados, faça um cálculo aritmético que calcule a idade do usuário e imprima uma mensagem na tela.\n",
+        "\n",
+        "#entrada\n",
+        "nome = input(\"Qual é o seu nome? \")\n",
+        "ano = int(input(\"Em que ano você nasceu? \"))\n",
+        "ano_t = int(input(\"Em que ano estamos? \"))\n",
+        "\n",
+        "#processamento\n",
+        "ida = ano_t - ano\n",
+        "\n",
+        "#saida\n",
+        "print(nome, \" sua idade é \", ida)"
       ],
       "metadata": {
-        "id": "q9VWOSBlvTSk"
+        "id": "q9VWOSBlvTSk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34fea671-1fb6-4209-a8cb-7e357ca34e71"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Qual é o seu nome? Ramos\n",
+            "Em que ano você nasceu? 2015\n",
+            "Em que ano estamos? 2024\n",
+            "Ramos  sua idade é  9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 04 - Sua resposta aqui..."
+        "# EXERCÍCIO 04 - Sua resposta aqui...\n",
+        "# 4 Um novo modelo de carro, super econômico foi lançado. Ele faz 20 km com 1 litro de combustível. Cada litro de combustível custa R$ 5,00.\n",
+        "# Faça um programa que pergunte ao usuário quanto de dinheiro ele tem e em seguida diga quantos litros de combustível ele pode comprar e quantos kilometros o carro consegue andar com esta quantidade de combustível.\n",
+        "\n",
+        "#entrada\n",
+        "din = float(input(\"Quanto dinheiro você tem? \"))\n",
+        "\n",
+        "#processamento\n",
+        "final = (din/5) * 20\n",
+        "\n",
+        "#saida\n",
+        "print(\"Você poderá percorrer \", final)"
       ],
       "metadata": {
-        "id": "qE53EPzkvUZE"
+        "id": "qE53EPzkvUZE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "124895b3-9a21-499d-a96c-0bc199307274"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quanto dinheiro você tem? 10\n",
+            "Você poderá percorrer  40.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 05 - Sua resposta aqui..."
+        "# EXERCÍCIO 05 - Sua resposta aqui...\n",
+        "# 5 Sendo v1 = 15, v2 = 10, v3 = 5, v4 = 0, defina qual será a resposta (VERDADEIRO OU FALSO) para as sentenças lógicas abaixo.\n",
+        "\n",
+        "#entrada\n",
+        "v1 = 15\n",
+        "v2 = 10\n",
+        "v3 = 5\n",
+        "v4 = 0\n",
+        "\n",
+        "\n",
+        "print(\"a) (v1 = 10) AND (v2 = 10)\")\n",
+        "\n",
+        "#processamento\n",
+        "a =  (v1 == 10) and (v2 == 10)\n",
+        "\n",
+        "#saida\n",
+        "print(a)\n",
+        "\n",
+        "\n",
+        "print(\"b) (v1 = 15) AND (v2 = 10)\")\n",
+        "\n",
+        "#processamento\n",
+        "b =  (v1 == 15) and (v2 == 10)\n",
+        "\n",
+        "#saida\n",
+        "print(b)\n",
+        "\n",
+        "\n",
+        "print(\"c) (v4 = 1) OR (v3 = 4)\")\n",
+        "\n",
+        "#processamento\n",
+        "c = (v4 == 1) or (v3 == 4)\n",
+        "\n",
+        "#saida\n",
+        "print(c)\n",
+        "\n",
+        "\n",
+        "print(\"d) (v1 > 10 AND v2 < 15) AND (v3 < 10 AND v4 = 0)\")\n",
+        "\n",
+        "#processamento\n",
+        "d = (v1 > 10 and v2 < 15) and (v3 < 10 and v4 == 0)\n",
+        "\n",
+        "#saida\n",
+        "print(d)\n",
+        "\n",
+        "\n",
+        "print(\"e) (v1 < 10 AND v2 > 15) OR (v3 > 5 OR v4 = 0)\")\n",
+        "\n",
+        "#processamento\n",
+        "e = (v1 < 10 and v2 > 15) or (v3 > 5 or v4 == 0)\n",
+        "\n",
+        "#saida\n",
+        "print(e)"
       ],
       "metadata": {
-        "id": "A1On3LZBvVZS"
+        "id": "A1On3LZBvVZS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7deab44c-8839-4904-a7fa-cc3683e619eb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a) (v1 = 10) AND (v2 = 10)\n",
+            "False\n",
+            "b) (v1 = 15) AND (v2 = 10)\n",
+            "True\n",
+            "c) (v4 = 1) OR (v3 = 4)\n",
+            "False\n",
+            "d) (v1 > 10 AND v2 < 15) AND (v3 < 10 AND v4 = 0)\n",
+            "True\n",
+            "e) (v1 < 10 AND v2 > 15) OR (v3 > 5 OR v4 = 0)\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# EXERCÍCIO 06 - Sua resposta aqui..."
+        "# EXERCÍCIO 06 - Sua resposta aqui...\n",
+        "# Solicite ao usuário uma quantidade de dias, o programa deve informar com base neste número: a quantidade de anos, meses e dias correspondente ao número informado.\n",
+        "# Considerar para um ano 360 dias e para um mês 30 dias.\n",
+        "\n",
+        "#entrada\n",
+        "dias = float(input(\"Quandos dias \"))\n",
+        "\n",
+        "#processamento\n",
+        "ano = dias // 365\n",
+        "ano_s = (dias % 365)\n",
+        "mes = ano_s //30\n",
+        "dia = ano_s %30\n",
+        "\n",
+        "#saida\n",
+        "print(\"Ano\", ano ,\"Mês\", mes,\"Dia\", dia )"
       ],
       "metadata": {
-        "id": "tEdnm97p1v59"
+        "id": "tEdnm97p1v59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b151964c-cf08-41e2-c075-db6fcf437b10"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quandos dias 523\n",
+            "Ano 1.0 Mês 5.0 Dia 13.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
